# ARIA-NBV

./: .cgcignore  .gitattributes  .gitignore  .gitmodules  .nojekyll  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  REQUIREMENTS.md  SETUP.md  autoimprove.md  ideas.md  index.html  prompts.md  pytest.ini  search.json
.agents/: AGENTS_INTERNAL_DB.md  (+4 more)
oracle_rri/: README.md  SIMPLIFIED_DATA_HANDLING.md  current_aria-nbv-env.yml  download_config.example.toml  environment.yml  fix_furstums.patch  main.py  pyproject.toml  test_compatibility.py  test_dataset.py  test_mesh_download.py
oracle_rri/examples/: __init__.py  simplified_dataset_usage.py
oracle_rri/oracle_rri/: __init__.py  config.py  pytorch3d_rendering_context.md  streamlit_app.py
oracle_rri/oracle_rri/analysis/: __init__.py  depth_debugger.py
oracle_rri/oracle_rri/app/: __init__.py  app.py  config.py  panels.py  state.py  state_types.py  ui.py
oracle_rri/oracle_rri/app/panels/: candidates.py  common.py  data.py  offline_cache_utils.py  offline_stats.py  plot_utils.py  rri.py  rri_binning.py  testing_attribution.py  vin_diagnostics.py  vin_utils.py  wandb.py
oracle_rri/oracle_rri/configs/: __init__.py  optuna_config.py  path_config.py  wandb_config.py
oracle_rri/oracle_rri/dashboard/: app.py  config.py  panels.py  services.py  ui.py
oracle_rri/oracle_rri/data/: __init__.py  __main__.py  cli.py  dataset.py  downloader.py  efm_dataset.py  efm_snippet_loader.py  efm_views.py  mesh_cache.py  metadata.py  new_findings.md  offline_cache.py  offline_cache_serialization.py  plotting.py  utils.py  views.py  vin_oracle_datasets.py  vin_oracle_types.py  vin_snippet_cache.py  vin_snippet_provider.py  vin_snippet_utils.py
oracle_rri/oracle_rri/data_handling/: README.md  __init__.py  cli.py  dataset.py  downloader.py  metadata.py  schemas.py
oracle_rri/oracle_rri/interpretability/: __init__.py  attribution.py
oracle_rri/oracle_rri/lightning/: __init__.py  aria_nbv_experiment.py  cli.py  lit_datamodule.py  lit_module.py  lit_module_old.py  lit_trainer_callbacks.py  lit_trainer_factory.py  optimizers.py
oracle_rri/oracle_rri/pipelines/: __init__.py  oracle_rri_labeler.py
oracle_rri/oracle_rri/pose_generation/: __init__.py  candidate_generation.py  candidate_generation_rules.py  findings.md  geometry.py  orientations.py  plotting.py  positional_sampling.py  reference_power_spherical_distributions.py  revision_proposal_candidate_view_generator.py  samplers.py  types.py  utils.py
oracle_rri/oracle_rri/rendering/: __init__.py  candidate_depth_renderer.py  candidate_pointclouds.py  efm3d_depth_renderer.py  plotting.py  pytorch3d-rendering-docs.md  pytorch3d_depth_renderer.py  unproject.py
oracle_rri/oracle_rri/rri_metrics/: __init__.py  coral.py  logging.py  metrics.py  oracle_rri.py  plotting.py  rri_binning.py  types.py
oracle_rri/oracle_rri/utils/: __init__.py  base_config.py  console.py  frames.py  grad_norms.py  optuna_optimizable.py  performance.py  plotting.py  rich_summary.py  schemas.py  summary.py  wandb_utils.py
oracle_rri/oracle_rri/views/: candidate_generation.py  candidate_rendering.py
oracle_rri/oracle_rri/vin/: __init__.py  backbone_evl.py  coral.py  model.py  model_v1_SH.py  model_v2.py  model_v2_old.py  model_v3.py  pipeline.py  plotting.py  pointnext_encoder.py  pose_encoders.py  pose_encoding.py  rri_binning.py  spherical_encoding.py  summarize_v3.py  traj_encoder.py  types.py  vin_modules.py  vin_v2_modules.py  vin_v2_utils.py
oracle_rri/oracle_rri/visualization/: __init__.py  candidate_app.py  candidate_generation_viz.py
oracle_rri/oracle_rri/viz/: __init__.py  mesh_viz.py
oracle_rri/scripts/: generate_vin_v2_arch.py  get_context.py  plot_vin_binning.py  plot_vin_encodings.py  plot_vin_inputs.py  run_efm3d_on_ase.py  summarize_vin.py  train_vin_lightning.py
oracle_rri/tests/: __init__.py  conftest.py  test_app_state_signature.py  test_candidate_rendering.py  test_console.py  test_dataset_factory.py  test_efm_dataset.py  test_mesh_cache.py  test_mesh_cropping.py  test_metric.py  test_pathconfig_isolation_regression.py  test_performance_mode.py  test_plotting_frustum_device.py  test_plotting_semidense.py  test_pose_generation.py  test_service.py
oracle_rri/tests/app/: test_offline_cache_memory.py
oracle_rri/tests/configs/: test_wandb_config_resume.py
oracle_rri/tests/data/: test_efm_snippet_loader.py  test_offline_cache_coverage.py  test_offline_cache_pruning.py  test_offline_cache_split.py  test_offline_cache_writer_skip.py  test_vin_snippet_cache_real_data.py
oracle_rri/tests/data_handling/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_cli.py  test_dataset.py  test_downloader.py  test_downloader_cli_list_snippet_totals.py  test_mesh_cache.py  test_metadata.py  test_real_data_integration.py  test_utils.py
oracle_rri/tests/integration/: test_frames_real_data.py  test_oracle_rri_labeler_real_data.py  test_render_backproject_real_data.py  test_vin_lightning_real_data.py
oracle_rri/tests/lightning/: test_binner_auto_refit.py  test_grad_norm_logging.py  test_interrupt_checkpoint.py  test_trainer_callbacks_model_checkpoint.py  test_wandb_logging.py
oracle_rri/tests/pose_generation/: test_align_to_gravity.py  test_candidate_generation_mesh_access.py  test_orientations.py  test_pose_generation.py  test_pose_generation_revised.py
oracle_rri/tests/rendering/: test_candidate_depth_renderer_filter_logging.py  test_candidate_renderer_cpu_backend.py  test_candidate_renderer_integration.py  test_depth_backprojection_conventions.py  test_pytorch3d_depth_renderer.py  test_pytorch3d_renderer.py  test_rendering_plotting_helpers.py
oracle_rri/tests/rri_metrics/: test_logging_metrics.py  test_logging_specs.py  test_oracle_rri_chunking.py
oracle_rri/tests/utils/: test_optuna_optimizable.py  test_plotting_utils.py
oracle_rri/tests/views/: test_candidate_generation.py
oracle_rri/tests/vin/: test_coral.py  test_rri_binning.py  test_semidense_features.py  test_types.py  test_vin_plotting_v3.py  test_vin_v2_global_pool.py  test_vin_v3_helpers.py
(+2359 files in other folders)
