[project]
name            = "oracle-rri"
version         = "0.1.0"
description     = "Oracle Relative Reconstruction Improvement for Next-Best-View Planning in the Aria Synthetic Environments Dataset"
readme          = "README.md"
authors         = [{ name = "Jan Duchscherer", email = "duchsche@hm.edu" }]
requires-python = ">=3.11"

dependencies = [
    # PyTorch ecosystem – installed from CUDA 12.1 wheels
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    # Scientific computing
    "numpy>=1.26.4",
    "scipy",
    # Core EFM3D / Aria ecosystem
    "omegaconf==2.3.0",
    "hydra-core==1.3.2",
    "webdataset==0.2.86",
    "vrs==1.2.1",
    "fsspec==2024.6.0",
    "einops==0.8.0",
    "pandas==2.2.2",
    "pydantic>=2.0.0",
    "pyquaternion==0.9.9",
    "pytransform3d==3.14.3",
    "opencv-python==4.10.0.84",
    "tqdm==4.66.4",
    "matplotlib==3.9.0",
    "moderngl==5.8.2",
    "trimesh==3.23.5",
    "scikit-image==0.24.0",
    "tensorboard==2.14.0",
    "torchmetrics==0.10.1",
    # Project Aria ecosystem
    "projectaria-tools==2.0.0",
    "projectaria-atek==1.0.0",
    # Our additional deps
    "efm3d",
    "plotly>=6.4.0",
    "open3d>=0.19.0",
    "rich>=13.9.4",
    "devtools>=0.12.2",
    "pydantic-settings>=2.12.0",
    "tqdm-stubs>=0.2.1",
    "types-requests>=2.32.4.20250913",
    "streamlit>=1.51.0",
    "tomlkit>=0.13.3",
    "fast-simplification>=0.1.12",
    "rtree>=1.4.1",
    "pyembree>=0.1.12",
    "power-spherical>=0.8.1",
    # VIN pose encoding + ordinal loss
    "e3nn==0.5.1",
    "coral-pytorch==1.4.0",
]

    [project.scripts]
    nbv-downloader = "oracle_rri.data.downloader:main"
    nbv-st         = "oracle_rri.streamlit_app:streamlit_entry"
    nbv-st-dbg     = "oracle_rri.streamlit_app:streamlit_entry"

    [project.optional-dependencies]
    dev = [
        "pytest>=8.4.2",
        "pytest-cov>=7.0.0",
        "ruff>=0.1.0",
        "mypy>=1.0.0",
        "syrenka>=0.5.7",
        "debugpy>=1.8.17",
    ]

    # PyTorch3D requires torch to be installed first, so it's an extra
    pytorch3d = [
        "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@main",
    ]

    notebook = [
        "ipympl>=0.9.0",
        "jupyter>=1.0.0",
        "ipykernel>=7.1.0",
        "notebook>=7.5.0",
        "jupyterlab>=4.5.0",
    ]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle_rri"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
# Ensure pytorch3d is built with the runtime torch
extra-build-dependencies = { pytorch3d = ["torch"] }

    [[tool.uv.index]]
    name     = "pytorch-cu121"
    url      = "https://download.pytorch.org/whl/cu121"
    explicit = true

    [tool.uv.sources]
    torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]
    torchvision = [
        { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
    ]
    torchaudio = [
        { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
    ]
    efm3d = { path = "../external/efm3d", editable = true }
    oracle_rri = { path = ".", editable = true }

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
check_untyped_defs     = true
disallow_untyped_defs  = true

[tool.ruff]
target-version = "py311"
line-length    = 120
indent-width   = 4

    [tool.ruff.lint]
    select = [
        "E",  # pycodestyle errors
        "W",  # pycodestyle warnings
        "F",  # Pyflakes
        "I",  # isort
        "B",  # flake8-bugbear
        "C4", # flake8-comprehensions
        "UP", # pyupgrade (Python 3.11+ features)
        "N",  # pep8-naming
    ]
    ignore = [
        "E501",  # line too long (handled by formatter)
        "UP037",
        "F722",
    ]

    [tool.ruff.format]
    quote-style               = "double"
    indent-style              = "space"
    skip-magic-trailing-comma = false
    line-ending               = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["oracle_rri"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

files = ["tests"]

    [[tool.mypy.overrides]]
    module                 = ["atek.*", "plotly.graph_objects.*"]
    ignore_missing_imports = true
